examples/test/testpolicy96.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy96
  namespace: namespace18
spec:
  podSelector:
    matchLabels:
      key24: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value29
          key12: value12
          key28: value14
      podSelector:
        matchLabels:
          key7: value25
